--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "v2",
-  "description": "Personal Website V2",
+  "name": "v1",
+  "description": "Portfolio Website",
   "version": "1.0.0",
-  "author": "Chandrika Deb <chandrikadeb7@gmail.com>",
+  "author": "Harshit Bansal <harshitbansal587@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chandrikadeb7/chandrikadeb7.github.io"
+    "url": "https://github.com/harshitbansall/harshitbansall.github.io"
   },
   "keywords": [
     "gatsby"
